fix post spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -132,6 +132,7 @@ h1, h2, h3 {
 .post {
     padding: 15px;
     background-image: linear-gradient(120deg, var(--color-surface), 30%, var(--color-background), 70%, var(--color-surface));;
+    margin: 10px 0px 10px 0px;
 }
 
 .post h1, h2, h3 {
